# conventional-release-action

./: .gitignore  .release-config.toml  Cargo.toml  Dockerfile  README.md  TESTING.md  action.yaml  renovate.json  test-docker.sh
.github/workflows/: release.yaml
src/: bump_type.rs  cli.rs  commit.rs  commit_analyzer.rs  config.rs  conventional_commit.rs  file_updater.rs  lib.rs  main.rs  output.rs  release.rs  validation.rs  version_manager.rs
src/scm/: git.rs  github.rs
tests/: integration_tests.rs
