[package]
name = "conventional-release-action"
version = "1.0.0"
edition = "2021"
description = "A flexible, config-driven release flow that scales from a single package to large monorepos"
license = "MIT"
repository = "https://github.com/NicoKNL/conventional-release-action"

[[bin]]
name = "conventional-release-action"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
semver = "1.0.27"
git2 = "0.20"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
